@@ -6,7 +6,6 @@ import org.freertr.addr.addrMac;
 import org.freertr.addr.addrType;
 import org.freertr.cfg.cfgAll;
 import org.freertr.cfg.cfgBrdg;
-import org.freertr.cfg.cfgIfc;
 import org.freertr.ifc.ifcBridgeIfc;
 import org.freertr.ifc.ifcDn;
 import org.freertr.ifc.ifcNull;
@@ -19,7 +18,6 @@ import org.freertr.pack.packHolder;
 import org.freertr.pipe.pipeSide;
 import org.freertr.prt.prtGenConn;
 import org.freertr.tab.tabGen;
-import org.freertr.tab.tabRouteIface;
 import org.freertr.user.userFilter;
 import org.freertr.user.userFormat;
 import org.freertr.user.userHelp;
