@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.11.9-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-11-09 07:39:49, took 00:17:33, with 50 workers, on 4066 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2025-11-09 08:58:12, took 00:15:45, with 50 workers, on 4067 cases, 0 failed, 0 traces, 5 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -104,6 +104,7 @@ http://sources.freertr.org/cfg/conn-erspan10.tst;conn-erspan10.tst;success;sep t
 http://sources.freertr.org/cfg/conn-erspan11.tst;conn-erspan11.tst;success;ethernet tunneling with erspan
 http://sources.freertr.org/cfg/conn-erspan12.tst;conn-erspan12.tst;success;vlan tunneling with erspan
 http://sources.freertr.org/cfg/conn-erspan13.tst;conn-erspan13.tst;success;tunnel interface with erspan
+http://sources.freertr.org/cfg/conn-erspan14.tst;conn-erspan14.tst;success;erspan server
 http://sources.freertr.org/cfg/conn-eth01.tst;conn-eth01.tst;success;ethernet encapsulation
 http://sources.freertr.org/cfg/conn-eth02.tst;conn-eth02.tst;success;point2point ethernet encapsulation
 http://sources.freertr.org/cfg/conn-eth03.tst;conn-eth03.tst;success;ethernet dot1q encapsulation
