@@ -100,6 +100,7 @@ qc pass: sep tunneling with erspan
 qc pass: ethernet tunneling with erspan
 qc pass: vlan tunneling with erspan
 qc pass: tunnel interface with erspan
+qc pass: erspan server
 qc pass: ethernet encapsulation
 qc pass: point2point ethernet encapsulation
 qc pass: ethernet dot1q encapsulation
