@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.11.9-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-11-09 07:39:49, took 00:17:33, with 50 workers, on 4066 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2025-11-09 08:58:12, took 00:15:45, with 50 workers, on 4067 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -116,6 +116,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-erspan11.tst">conn-erspan11.tst</a></td><td>success</td><td>ethernet tunneling with erspan</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-erspan12.tst">conn-erspan12.tst</a></td><td>success</td><td>vlan tunneling with erspan</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-erspan13.tst">conn-erspan13.tst</a></td><td>success</td><td>tunnel interface with erspan</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-erspan14.tst">conn-erspan14.tst</a></td><td>success</td><td>erspan server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth01.tst">conn-eth01.tst</a></td><td>success</td><td>ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth02.tst">conn-eth02.tst</a></td><td>success</td><td>point2point ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth03.tst">conn-eth03.tst</a></td><td>success</td><td>ethernet dot1q encapsulation</td></tr>
